<resources>
    <string name="mnCuentaCorriente">Cuenta Corriente</string>
    <string name="mnCancelarPedido">Cancelar pedido</string>
    <string name="mnAnularPedido">Anular pedido</string>
    <string name="mnCancelarEgreso">Cancelar egreso</string>
    <string name="mnGenerarRemito">Generar remito</string>
    <string name="mnCancelarNoPedido">Cancelar no atención</string>
    <string name="mnPedidos">Pedidos</string>
    <string name="mnIntegradoDeMercaderia">Integrado de mercaderia</string>
    <string name="mniVerCheques">Ver Cheques</string>
    <string name="mniObjetivos">Objetivos</string>
    <string name="mniCatalogo">Catalogo</string>
    <string name="mniOrdenar">Ordenar</string>
    <string name="mniConfigurarBusqueda">Configurar búsqueda</string>
    <string name="mnRegistrarPedido">Registrar pedido</string>
    <string name="mnRegistrarNoPedido">Registrar no atención</string>
    <string name="mnVerDetalles">Ver detalles</string>
    <string name="mnInformacionEnvio">Información del envio</string>
    <string name="mnVerPrecios">Ver precios</string>
    <string name="mnModificarPedido">Modificar pedido </string>
    <string name="mnModificarEgreso">Modificar egreso </string>
    <string name="mnImprimirRecibo">Imprimir Recibo</string>
    <string name="mnImprimirResumenRecibos">Imprimir Resumen</string>
    <string name="mnImprimirPedido">Imprimir Pedido</string>
    <string name="mnVerPedidos">Ver pedidos</string>
    <string name="mnVerVentas">Ver ventas</string>
    <string name="mniDiaVisita">Día de visita</string>
    <string name="mniFiltros">Filtros</string>
    <string name="mniFiltrarSucursal">Filtrar por sucursal</string>
    <string name="mniGenerarAN">Generar anticipo</string>
    <string name="mniResumenRecibos">Imprimir Resumen</string>
    <string name="mnTipoDocumento">Tipo de documento</string>
    <string name="mnEnviados">Enviados/No enviados</string>
    <string name="mnSoloEnviados">Enviados</string>
    <string name="mnNoEnviados">No enviados</string>
    <string name="mnTodos">Todos</string>
    <string name="mnEgresos">Egresos</string>
    <string name="mnVales">Agregar vales</string>
    <string name="mnMostrarMapa">Mostrar en mapa</string>
    <string name="mnVentasXArticulo">Ventas por articulo</string>
    <string name="mniPagarMonto">Pagar monto</string>
    <string name="mniPagarTodas">Pagar todas</string>
    <string name="mnAnulo">Anulados</string>
    <string name="mnDescripcion">Descripción</string>
    <string name="mnLlamar">Llamar</string>
    <string name="intervaloSincronizacion">Intervalo de sincronización (segundos)</string>
    <string name="descargandoImagenes">Descargando Imagenes</string>
    <string name="abrir">Abrir</string>
    <string name="prov">Prov:</string>
    <string name="emp">Emp:</string>
    <string name="atencion">Atención</string>
    <string name="valorYaAgregado">El valor ya fue agregado. Si desea modificarlo, elimine y cargue nuevamente.</string>
    <string name="agregarImpuesto">Agregar impuesto</string>
    <string name="seleccionarProvincia">Primero debe seleccionar una provincia.</string>
    <string name="noAnticipo">El total a pagar no puede superar la suma de los saldos de los comprobantes imputados.</string>
    <string name="cerrarAplicacion">\003F Al finalizar el proceso se cerrara la aplicacion.</string>
    <string name="eliminar">Eliminar</string>
    <string name="confirmarEliminar">¿Eliminar?</string>
    <string name="editar">Editar</string>
    <string name="buscarProductoProv">Buscar productos del proveedor</string>
    <string name="guardar">Guardar</string>
    <string name="agregar">Agregar</string>
    <string name="categoriaFiscal">Categoría fiscal</string>
    <string name="app_name">VGM-Movil</string>
    <string name="ultragema">Ultragema</string>
    <string name="ordenVisita">Orden de visita</string>
    <string name="buscar">Buscar</string>
    <string name="ordenarFecha">Fecha</string>
    <string name="ordenarMotivo">Motivo</string>
    <string name="codigo">Código</string>
    <string name="razonSocial">Razon social</string>
    <string name="domicilio">Domicilio</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="agregar_efectivo">"Agregar efectivo" </string>
    <string name="agregar_cheque">"Agregar cheque" </string>
    <string name="agregar_retencion">"Agregar retención" </string>
    <string name="agregar_deposito">"Agregar depósito" </string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="todos">Todos</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="ActualizarUbicacion">El cliente tiene registradas las coordenadas. ¿Desea actualizar la ubicación?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="visitados">Visitados</string>
    <string name="noVisitados">No visitados</string>
    <string name="enviados">Enviados</string>
    <string name="noEnviados">No enviados</string>
    <string name="actualizar">Actualizar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="instalarActualizacion">Instalar actualizacion</string>
    <string name="tipo_prompt">Seleccione el tipo de dato del código de articulo</string>
    <string name="intervaloBorradoBackups">Intervalo limpieza por dias</string>
    <string name="configBackups">Configuracion de backups:</string>
    <string name="intervaloBorradoBackupsBack">Limpieza por cantidad de backups</string>
    <string name="eliminacionArchivoBDExitosa">Se elimino el archivo de base de datos. Ahora debe sincronizar.</string>
    <string name="datosPendientes">Datos pendientes de envio.</string>
    <string name="legajo">Legajo: </string>
    <string name="pedidosPendientes">Pedidos pendientes: </string>
    <string name="recibosPendientes">Recibos pendientes: </string>
    <string name="noAtencionesPendientes">No atenciones pendientes: </string>
    <string name="validacionOperacion">Validación de Operación</string>
    <string name="eliminacionBd">¿Desea eliminar la base de datos?. Esta operación perderá los datos pendientes de enviar.</string>
    <string name="actualizandoMovimientos">Actualizando tabla movimientos</string>
    <string name="changelog_full_title">VGM Gema</string>
    <string name="error">Error</string>
    <string name="rangoInvalido">El rango horario para el envío configurado es inválido</string>
    <string name="info">Información</string>
    <string name="changelog_title">Los cambios</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">mas…</string>
    <string name="sugerenciaSincronizar">Sugerir sincronización al iniciar</string>
    <string name="envioAutomaticoHojasDetalle">Enviar detalles de hojas automaticamente. </string>
    <string name="envioAutomaticoEgresos">Enviar egresos automaticamente. </string>
    <string name="busquedaPorListaArticulo">Registrar pedidos con búsqueda por lista de articulos</string>
    <string name="sincronizando">Sincronizando</string>
    <string name="enviando">Enviando datos al servidor</string>
    <string name="configUbicacionBD">Ubicación de la Base de Datos:</string>
    <string name="moverBD">¿Desea mover la carpeta del sistema a: </string>
    <string name="moverBDTitulo">Mover carpeta del sistema</string>
    <string name="lblActualizConfConex">Actualizar conf. de conexion</string>
    <string name="lblEfectivo">Total efectivo:</string>
    <string name="lblCheque">Total cheque:</string>
    <string name="lblCheques">Cheques:</string>
    <string name="lblRetencion">Total retención:</string>
    <string name="lblDeposito">Total depósito:</string>
    <string name="lblTotalPagos">Pagos:</string>
    <string name="lblTotalDocumentos">A pagar:</string>
    <string name="lblSeleccionarMoneda">Seleccionar tipo de moneda</string>
    <string name="lblSeleccionarOpcion">Seleccionar opcion</string>
    <string name="lblCotizacion">Cotización:</string>
    <string name="lblListadoDepositos">Listado de Depósitos</string>
    <string name="lblListadoMonedas"> Listado de Monedas</string>
    <string name="lblListadoRetenciones"> Listado de Retenciones</string>
    <string name="lblNoAtencion"> No atención</string>
    <string name="lblTipoCheques">Tipo de cheque</string>
    <string name="lblImporte">Importe:</string>
    <string name="lblTurno">Turno:</string>
    <string name="lblRecibo">Recibo</string>
    <string name="lblFechaEntrega">Fecha de entrega:</string>
    <string name="lblListadoCheques">Listado de cheques</string>
    <string name="lblImporteFinal">Importe final:</string>
    <string name="lblMoneda">Moneda:</string>
    <string name="lblCuenta">Cuenta:</string>
    <string name="lblFormatoFecha">Formato de fecha en Movil</string>
    <string name="lblEnvioVentaAutomatico">Enviar ventas al guardar</string>
    <string name="lblEnvioReciboAutomatico">Enviar recibos al guardar</string>
    <string name="lblDescargaStockAutomatica">Descargar stock automáticamente</string>
    <string name="lblCambiarPtoVta">Permite cambiar punto de venta en la venta</string>
    <string name="lblPagoTotal">Pago total de la factura</string>
    <string name="lblTestConexionServidor">Probar conexión</string>
    <string name="lblPuntoVenta">Punto de venta</string>
    <string name="lblRepartidor">Repartidor</string>
    <string name="lblRepartidorDelDia">Repartidor:</string>
    <string name="lblTipoDocumento">Documento</string>
    <string name="lblTotal">Total:</string>
    <string name="lblCliente">Cliente</string>
    <string name="lblCondicionVenta">Condición de venta:</string>
    <string name="lblCuit">Cuit:</string>
    <string name="lblFechaVenta">Fecha de venta:</string>
    <string name="lblCategoriaFiscalCliente">Categoría Fiscal: </string>
    <string name="lblPrecioListaNro">$100,25</string>
    <string name="lblCero">0</string>
    <string name="lblDoc">Doc</string>
    <string name="lblDocEj">FC</string>
    <string name="lblTipo">Tipo</string>
    <string name="lblTipoEj">A</string>
    <string name="lblPtoVtaCabecera">Pto Vta</string>
    <string name="lblPtoVtaCabeceraEj">1</string>
    <string name="lblNumeroCabecera">Num</string>
    <string name="lblNumeroCabeceraEj">10225</string>
    <string name="lblNombreClienteCompleto">Nombre cliente completo</string>
    <string name="lblCondicionVentaEj">Contado</string>
    <string name="lblFechaEj">24/10/23</string>
    <string name="lblDocumentosSeleccionadosCabecera">Documentos Seleccionados</string>
    <string name="lblFechaVencimientoCheque">Fecha de vencimiento:</string>
    <string name="lblBancoLabel">Banco:</string>
    <string name="lblSucursalLabel">Sucursal:</string>
    <string name="lblBancoDescripcionEj">Banco descripción larga de un nombre de banco para mostrar en la visualización</string>
    <string name="lblSucursalDescripcionEj">1234</string>
    <string name="lblCuitDescripcionEj">00123456780</string>
    <string name="lblNroChequeLabel">Nro Cheque:</string>
    <string name="lblNroChequeDescripcionEj">12345678</string>
    <string name="lblNroCuentaLabel">Nro Cuenta:</string>
    <string name="lblNroCuentaDescripcionEj">12345678901</string>
    <string name="lblFechaHoraDescripcionEj">12–12–2010 15:55:24</string>
    <string name="lblBancoEjemplo">Santander</string>
    <string name="lblNroComprabante">Nro Comprobante:</string>
    <string name="lblFechaDeposito">Fecha Depósito:</string>
    <string name="lblCantidadChequesLabel">Cantidad de Cheques:</string>
    <string name="lblCienDescripcion">$100</string>
    <string name="cdSeleccionarRepartidor">Seleccionar Repartidor</string>
</resources>