<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/selector_item"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblBanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblBancoLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblBancoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:maxLines="2"
            android:text="@string/lblBancoDescripcionEj" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="right"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblSucursal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSucursalLabel"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblSucursalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/lblSucursalDescripcionEj" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblCuit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblCuit"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblCuitValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/lblCuitDescripcionEj" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNumeroCheque"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/lblNroChequeLabel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblNumeroChequeValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/lblNroChequeDescripcionEj" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNumeroCuenta"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/lblNroCuentaLabel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblNumeroCuentaValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/lblNroCuentaDescripcionEj" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblFecha"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/lblFechaVencimientoCheque"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblFechaValue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/lblFechaHoraDescripcionEj" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTotal"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lblPrecioListaNro"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
